--- a/data/demo.adoc
+++ b/data/demo.adoc
@@ -1,12 +1,11 @@
 = Lucas's Blog
-Lucas - ngoclong.tran@vanilacorp.com
-
+Lucas - ngoclong.tran@vanilacorp.com - Version 1.0.0, 2023-07-01
 :sectnums:
-:toc: left
+:toc: 
 :toclevels: 3
 
-
 == Version History
+
 [width="100%",options="header",cols="1,5,1"]
 |====================
 | Version | Changes | Release Data(YYYY-MM-DD)  
@@ -18,6 +17,10 @@ Lucas - ngoclong.tran@vanilacorp.com
 |
 |
 |====================
+
+TIP: If have any question, you can contact email ngoclong.tran@vanilacorp.com
+
+
 == Blogging with Github Pages and Asciidoc
 
 *2015-12-22*
@@ -108,3 +111,7 @@ image::http://wfouche.github.io/Blog/2015-12-Asciidoc/BlogWebPage.png[]
 * https://www.gliffy.com/
 
 
+
+
+
+:toc!:
